Refactor resume.html to improve structure and add content to sections

--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,8 @@
       <title>Ravina-Resume</title>
     </head>
       <body>
+
+        <!-- header with nav -->
           <h1>Ravinakumari I.R</h1>
           <header>
             <nav>
@@ -18,8 +20,11 @@
                   </ol>
             </nav>
           </header>
-          <hr>
+        <hr>
+
+        <!-- Main with 4 section -->
           <main>
+            <!-- About section -->
               <section id="about">
                 <h2>About:</h2>
                 <p>Final-year CSE undergraduate skilled in DSA, OOP, and full-stack development (Java, Python, React, Node.js, REST APIs, databases), seeking an entry-level Software Developer role to build scalable applications and grow as an engineer.</p>
@@ -69,6 +74,8 @@
               </table>
           </section>
           <hr>
+
+          <!-- Education section -->
           <section id="education">
            <h2>Education:</h2>
            <p>HKBK College of Engineering, Bengaluru<br>
@@ -77,10 +84,12 @@
             </p>
           </section>
           <hr>
+
+          <!-- Project section -->
           <section id="projects">
             <h2>Projects</h2>
 
-              <div class="project">
+              <div>
 
                 <h3>Soil Fertility Detection System</h3>
                 <p><strong>Tech:</strong> Python, Flask, Pandas, Scikit-learn</p>
@@ -94,7 +103,7 @@
               </div>
 
 
-              <div class="project">
+              <div >
 
                 <h3>Smart Collar for Real-Time Dog Health Monitoring and Location Tracking</h3>
                 <p><strong>Tech:</strong> IoT</p>
@@ -108,7 +117,7 @@
               </div>
 
 
-              <div class="project">
+              <div >
 
                 <h3>Real-Time Chat Application</h3>
                 <p><strong>Tech:</strong> MERN Stack, Microservices</p>
@@ -124,6 +133,7 @@
           </section>
           <hr>
 
+          <!-- Certification Session -->
           <section id="certification">
              <h2>Certifications</h2>
               <ul>
@@ -137,6 +147,7 @@
           </section>
           <hr>
 
+         <!--Contact Section  -->
           <section id="contact">
             <h2>Contact:</h2>
             <p><a href="tel:+918904473975">+91-8904473975</a></p>
@@ -148,6 +159,7 @@
           </main>
           <hr>
 
+<!-- footer  -->
           <footer>
              <p>© 2026 Ravina. All rights reserved.</p>
           </footer>
